fixed newline not showing in chat bug, fixed text box staying populated between views bug, added capability to edit user info

--- a/style/base.css
+++ b/style/base.css
@@ -60,12 +60,12 @@ section[data-type="sidebar"] > header .icon.icon-close {
   background-image: url(headers/images/icons/close.png);
 }
 
-#newUserInputs {
+#newUserInputs, #userInfo{
   font-size: 1.6rem;
   padding-left: 1.5rem;
 }
 
-#newUserInputs label{
+#newUserInputs label, #userInfo label{
   float: left;
   width: 25%;
 }
